--- a/src/main/resources/assets/nura/lang/en_us.json
+++ b/src/main/resources/assets/nura/lang/en_us.json
@@ -10,6 +10,8 @@
 
   "block.nura.yokai_lamp": "Yokai Lamp",
   "block.nura.soul_yokai_lamp": "Soul Yokai Lamp",
+  "block.nura.tatami_block": "Tatami Block",
+  "block.nura.tsugikumo_web_block": "Tsugikumo Web Block",
 
   "item.nura.nurarihyon_spawn_egg": "Nurarihyon Spawn Egg"
 }
