Added new block ,And new shard

--- a/src/main/resources/assets/nura/lang/en_us.json
+++ b/src/main/resources/assets/nura/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.nura.final_demon_lord_hammer": "Final Demon Lord Hammer",
 
   "item.nura.shikigami": "Shikigami",
+  "item.nura.ice_shard": "Ice Shard",
 
   "itemGroup.nura.main": "Nurarihyon No Mago",
 
