Added new item ,block and fixed bug of translator

--- a/src/main/resources/assets/nura/lang/en_us.json
+++ b/src/main/resources/assets/nura/lang/en_us.json
@@ -17,6 +17,7 @@
   "block.nura.small_ice_yokai_bud": "Small Ice Yokai Bud",
   "block.nura.medium_ice_yokai_bud": "Medium Ice Yokai Bud",
   "block.nura.large_ice_yokai_bud": "Large Ice Yokai Bud",
+  "block.nura.blade_stand": "Blade Stand",
 
   "item.nura.nurarihyon_spawn_egg": "Nurarihyon Spawn Egg"
 }
