Added new item ,new feature item

--- a/src/main/resources/assets/nura/lang/en_us.json
+++ b/src/main/resources/assets/nura/lang/en_us.json
@@ -6,6 +6,9 @@
 
   "item.nura.shikigami": "Shikigami",
   "item.nura.ice_shard": "Ice Shard",
+  "item.nura.yokai_soul": "Yokai Soul",
+  "item.nura.yokai_handle": "Yokai Handle",
+  "item.nura.yokai_blade": "Yokai Blade",
 
   "itemGroup.nura.main": "Nurarihyon No Mago",
 
