Added Nurarihan ,Deleted all recipes ,Retexture Nurarihyon

--- a/src/main/resources/assets/nura/lang/en_us.json
+++ b/src/main/resources/assets/nura/lang/en_us.json
@@ -24,5 +24,7 @@
   "block.nura.blade_stand": "Blade Stand",
   "block.nura.unfire_yokai_lamp": "Unfire Yokai Lamp",
 
-  "item.nura.nurarihyon_spawn_egg": "Nurarihyon Spawn Egg"
+  "item.nura.nurarihyon_spawn_egg": "Nurarihyon Spawn Egg",
+  "item.nura.nurarihan_spawn_egg": "Nurarihan Spawn Egg"
+
 }
